--- a/Python/StudyBud-Lester/base/templates/base/room_form.html
+++ b/Python/StudyBud-Lester/base/templates/base/room_form.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <div>
-    <form method=" POST" action="">
+    <form method="POST" action="">
         {% csrf_token %}
-        {{form}}
-        <input type="Submit" value="Submit">
+        {{ form.as_p }}
+        <input type="submit" value="Submit">
     </form>
 </div>
 {% endblock %}
