--- a/Python/StudyBud-Lester/base/templates/base/room.html
+++ b/Python/StudyBud-Lester/base/templates/base/room.html
@@ -4,4 +4,18 @@
 
 <h1>{{room.name}}</h1>
 
-{% endblock content %}
+<p>{{room.description}}</p>
+
+<div class="comment-wrapper">
+    <h3>Conversation</h3>
+    <hr>
+
+        {% for message in room_messages %}
+        <div>
+            <small>@{{message.user}} {{message.created|timesince}}</small>
+            <p>{{message.body}}</p>
+            <hr>
+        </div>
+        {% endfor %}
+</div>
+{% endblock %}
